<resources>
    <string name="app_name">超家伙(买家版)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_text">超家伙</string>
    <string name="goods_level_text">lv1</string>
    <string name="error_invalid_number">请输入正确的数字</string>
    <string name="error_invalid_digit">请输入正确的数字</string>
    <string name="error_invalid_float">请输入正确的浮点数</string>
    <string name="error_invalid_mobile">输入的手机号码不可用</string>
    <string name="error_length_password">密码至少6位且不超过20位</string>
    <string name="error_invalid_password">密码以字母开头只能包含字符、数字和下划线</string>
    <string name="error_incorrect_password">手机号码不存在或者密码不正确</string>
    <string name="error_field_required">必输</string>
    <string name="order_title_text">暨南社区便利店</string>
    <string name="good_level_text">LV1</string>
    <string name="order_horn_text">你还有未领取的商家补贴</string>
    <string name="order_complete_num_text">0</string>
    <string name="order_complete_text">已完成</string>
    <string name="order_sell_num_text">0</string>
    <string name="order_sell_text">进行中</string>
    <string name="order_in">进行中</string>
    <string name="order_complete">已完成</string>
    <string name="order_num_text">订单编号:</string>
    <string name="order_person_text">收货人:</string>
    <string name="order_serial_text">订单号:</string>
    <string name="order_buyer_text">收货人:</string>
    <string name="commication_text">再次联系</string>
    <string name="order_item_price_text">实收款:</string>
    <string name="order_item_time_text">完成时间：</string>
    <string name="order_number_text">数量:</string>
    <string name="btn_complete_text">订单完成</string>
    <string name="setting_me_text">头像</string>
    <string name="setting_name_text">名字</string>
    <string name="setting_city_text">所在城市</string>
    <string name="setting_qq_text">QQ</string>
    <string name="setting_wechat_text">微信号</string>
    <string name="setting_card_text">关联卡号</string>
    <string name="setting_password_text">重置取现密码</string>
    <string name="setting_remind_text">提示音</string>
    <string name="setting_clearcache_text">清除缓存</string>
    <string name="setting_update_text">检查更新</string>
    <string name="setting_feedback_text">意见反馈</string>
    <string name="setting_share_text">分享给朋友</string>
    <string name="setting_about_text">关于超家伙</string>
    <string name="search_head_image_text">搜索商家</string>
    <string name="search_head_address_text">广州</string>
    <string name="fragment_home_selector_distance_text">按距离</string>
    <string name="fragment_home_selector_sale_text">按销量</string>
    <string name="fragment_home_selector_populatiry_text">按人气</string>
    <string name="item_home_buy_btn_text">抄他家</string>
    <string name="order_details_info_text">订单信息</string>
    <string name="order_details_serial_text">订单编号</string>
    <string name="order_details_time_text">下单时间</string>
    <string name="order_details_payway_text">支付方式</string>
    <string name="order_details_status_text">订单状态</string>
    <string name="order_details_goodsinfo_text">商品信息</string>
    <string name="order_details_delivery_text">收货信息</string>
    <string name="order_details_person_text">收货人</string>
    <string name="order_details_tel_text">手机号码</string>
    <string name="order_details_address_text">收货地址</string>
    <string name="order_details_deliverytime_text">收货时间</string>
    <string name="order_details_bill_text">发票抬头</string>
    <string name="order_details_money_text">订单金额</string>
    <string name="order_details_allmoney_text">订单总金额</string>
    <string name="order_details_freight_text">运费</string>
    <string name="item_order_details_num_text">数量</string>
    <string name="item_order_details_money_text">金额</string>
    <string name="order_details_shoulpay_text">应付金额</string>
    <string name="delete_order_text">删除订单</string>
    <string name="order_details_transport_btn">物流信息</string>
    <string name="evaluate_top_text">请您评价</string>
    <string name="evaluate_edit_text">您可以从商品质量，配送，服务态度等方面来发表评价(200字以内)</string>
    <string name="goods_view_title">霜降更甜10斤 山东烟台栖霞苹果水果新鲜 红富士苹果</string>
    <string name="goods_view_content">红富士是从普通富士的芽（枝）变中选育出的着色系富士的统称。富士苹果是日本农林水产省果树试验场盛冈分场于1939年以国光为母本，元帅为父本进行杂交，历经20余年，选育出的苹果优良品种，具有晚熟、质优、味美、耐贮等优点，于1962年正式命名，是世界上最著名的晚熟苹果品种。富士果实虽有风味好、晚熟、耐贮等优点，但也存在着果实着色差的缺点。为此，日本各地又从富士当中选出了许多着色好的富士芽变，统称为红富士。</string>
    <string name="goods_view_price">￥10.00</string>
    <string name="goods_view_headtitle_text">小飞侠科比之店铺</string>
    <string name="goods_view_postage">包邮</string>
    <string name="goods_view_btn_joinus_text">我也要加盟</string>
    <string name="goods_view_contact_text">联系卖家</string>
    <string name="goods_view_collect_text">收藏</string>
    <string name="goods_view_cart_btn_text">加入购物车</string>
    <string name="goods_view_buy_btn_text">立即购买</string>
    <string name="goods_view_show_category_text">查看商品分类</string>
    <string name="goods_view_enter_shop_text">进入店铺</string>
    <string name="submit_evaluate_text">提交我的评价</string>
    <string name="chat_edit_message_text">请输入消息！</string>
    <string name="chat_send_btn_text">发送</string>
    <string name="btn_ratingBar_btn_text">我要评价</string>
    <string name="login_text">立即登录</string>
    <string name="login_username_text">账号:</string>
    <string name="login_username_edit_hint">手机号</string>
    <string name="login_password_edit_hint">请输入密码</string>
    <string name="login_password_text">密码:</string>
    <string name="login_btn_text">登录</string>
    <string name="login_registe_text">手机快速注册</string>
    <string name="login_retrieve_text">找回密码</string>
    <string name="login_by_weixin_text">微信登录</string>
    <string name="login_by_qq_text">QQ登录</string>
    <string name="login_by_other_text">其他方式登录</string>
    <string name="register_tel_text">输入手机号码</string>
    <string name="register_sms_text">输入短信密码</string>
    <string name="register_details_text">输入手机号，点击“获取密码后”，系统会自动发一条默认的密码短信</string>
    <string name="register_tel_hint_text">请输入手机号</string>
    <string name="register_code_hint_text">请输入验证码</string>
    <string name="register_telcode_hint_text">请输入短信验证码</string>
    <string name="register_password_comfirm_hint_text">请重复输入密码</string>
    <string name="error_comfirm_password">两次输入的密码不相同</string>
    <string name="send_telcode">获取验证码</string>
    <string name="register_checkbox_text">同意，注册协议</string>
    <string name="register_confirm_text">确定</string>
    <string name="register_bottom_text1">[提示]</string>
    <string name="register_bottom_text2">1.使用手机注册免费</string>
    <string name="register_bottom_text3">2.此手机号登陆超家伙</string>
    <string name="hot_city_text">热门城市</string>
    <string name="all_city">所有城市</string>
    <string name="submit_order_btn_text">完成</string>
    <string name="cart_text">购物车</string>
    <string name="goods_calculate_text">合计</string>
    <string name="goods_calculate_bottom_text">免费配送</string>
    <string name="goods_calculate">￥：0</string>
    <string name="myorder_top_tip_text">7月新款爆品，同城跨区域支持快递限时送达！</string>
    <string name="my_order_name_text">刘岚江</string>
    <string name="my_order_tel_text">18801081288</string>
    <string name="my_order_address_text">地 址:</string>
    <string name="my_order_address">广州市越秀区万国城4-a-1205</string>
    <string name="my_order_receive_time_text">收货时间:</string>
    <string name="my_order_receive_time">24小时(0:00-24:00)</string>
    <string name="my_order_pay_text">付款方式:</string>
    <string name="my_order_pay">微信支付</string>
    <string name="my_order_pay_later">货到付款</string>
    <string name="goods_myorder_shop_name_text">喜多多便利店</string>
    <string name="myorder_wantbuy_text">你可能想要</string>
    <string name="me_order_text">我的订单</string>
    <string name="me_marketing_text">营销中心</string>
    <string name="me_shop_text">店铺管理</string>
    <string name="me_goods_text">商品管理</string>
    <string name="me_help_text">帮助中心</string>
    <string name="me_customerservice_text">联系客服</string>
    <string name="me_remind_text">我的消息</string>
    <string name="me_version_text">版本</string>
    <string name="me_category_text">类别</string>
    <string name="me_address_text">我的地址</string>
    <string name="me_coupon_text">我的优惠券</string>
    <string name="me_share_text">分享超家伙</string>
    <string name="goods_cart_num_text">0</string>
    <string name="goods_direct_order_text">直接下单</string>
    <string name="new_address_btn_text">+ 新建地址</string>
    <string name="item_address_tip_text">长按删除当前地址</string>
    <string name="dialog_text">收货时间</string>
    <string name="dialog_receive_time">今天 10：00-11：00</string>
    <string name="dialog_now_send">现在送货</string>
    <string name="dialog_pre_set">预设时间</string>
    <string name="pay_way_cash_text">货到付款</string>
    <string name="pay_way_online_text">在线支付(享优惠，得两倍积分)</string>
    <string name="weixin_radio_text">微信支付(推荐)</string>
    <string name="zhifubao_radio_text">支付宝支付</string>
    <string name="yinlian_radio_text">银联支付</string>
    <string name="pay_confirm_receive_text">收款方</string>
    <string name="pay_confirm_goods_text">商品</string>
    <string name="pay_btn_text">立即支付</string>
    <string name="item_evaluate_tip_text">认真评价，赢积分！</string>
    <string name="evaluate_btn_text">提交我的评价</string>
    <string name="order_details_evaluate_btn_text">我要评价</string>
    <string name="pay_pwd_text">请输入支付密码</string>
    <string name="pay_way_bank_text">使用工商银行储蓄卡(2122),</string>
    <string name="pay_way_choose_bank_text">更换</string>
    <string name="remind_seller_btn_text">提醒一下发货</string>
    <string name="contact_seller_btn_text">在线联系卖家</string>
    <string name="wait_order_info_text">订单已下，请等待卖家确认回复.....</string>
    <string name="confirm_order_btn_text">好的，谢谢！</string>
    <string name="pay_way_confirm_btn">确认</string>
    <string name="myorder_money_text">费用明细</string>
    <string name="myorder_delivery_text">配送费</string>
    <string name="myorder_favourable_money_text">优惠金额</string>
    <string name="myorder_service_money_text">服务费</string>
    <string name="myorder_give_text">赠品</string>
    <string name="all_money_text">合计:</string>
    <string name="count_money_text">购物满49元免费送费</string>
    <string name="select_all_text">全选</string>
    <string name="left_home">首页</string>
    <string name="left_myorder">我的订单</string>
    <string name="left_me">账号</string>
    <string name="left_message">消息</string>
    <string name="left_head_title">抄家伙</string>
    <string name="aboutus_version">V1.0.1</string>
    <string name="aboutus_intro">超你所选，物有所值！</string>
    <string name="aboutus_email">Email:chaojihuo12345@sina.com</string>
    <string name="aboutus_tel">4000-000-000</string>
    <string name="aboutus_copyright">版权所有 @ 超家伙</string>
    <string name="me_aboutus_text">关于我们</string>
    <string name="view_goods_text">查看</string>
    <string name="add_address_title_text">新建地址</string>
    <string name="add_address_name_text">姓名:</string>
    <string name="add_address_name_hint">请输入姓名</string>
    <string name="add_address_tel_text">电话:</string>
    <string name="add_address_tel_hint">请输入电话</string>
    <string name="add_address_address_text">门牌地址:</string>
    <string name="add_address_address_hint">请输入地址</string>
    <string name="add_address_confirm">确认</string>
    <string name="preset_time_title_text">预设时间</string>
    <string name="showtime_hint"></string>
    <string name="showdate_hint"></string>
    <string name="pickdate_text">选择日历</string>
    <string name="picktime_text">选择时间</string>
    <string name="preset_time_confirm">确认</string>
    <string name="goods_view_standard_text">规格</string>
    <string name="goods_view_weight_text">重量</string>
    <string name="goods_view_details_text">图文详情</string>
    <string name="add_address_city_text">城市</string>
    <string name="cart_submit_btn_text">下单</string>
    <string name="all_postage_text">邮费:</string>
    <string name="myorder_goods_num_text">商品数量</string>
    <string name="all_discount_money_text">优惠金额</string>
    <string name="order_view">查看订单</string>
    <string name="order_search_edit">商品名、订单号、手机、姓名等</string>
</resources>