<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitebg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60.0dip"
        android:background="@color/cyan" >

        <TextView
            android:id="@+id/add_address_title_text"
            style="@style/white_normal_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12.0dip"
            android:text="@string/add_address_title_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitebg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip" >

            <TextView
                android:id="@+id/add_address_name_text"
                style="@style/black_normal_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/add_address_name_text" />

            <EditText
                android:id="@+id/add_address_name"
                style="@style/gray_small_style"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_toRightOf="@+id/add_address_name_text"
                android:background="@drawable/edit_address"
                android:hint="@string/add_address_name_hint"
                android:paddingLeft="6.0dip" />
        </RelativeLayout>

        <ImageView style="@style/gray_one_style_line" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip" >

            <TextView
                android:id="@+id/add_address_tel_text"
                style="@style/black_normal_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/add_address_tel_text" />

            <EditText
                android:id="@+id/add_address_tel"
                style="@style/gray_small_style"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_toRightOf="@+id/add_address_tel_text"
                android:background="@drawable/edit_address"
                android:hint="@string/add_address_tel_hint"
                android:paddingLeft="6.0dip" />
        </RelativeLayout>

        <ImageView style="@style/gray_one_style_line" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip" >

            <TextView
                android:id="@+id/add_address_address_text"
                style="@style/black_normal_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:text="@string/add_address_address_text" />

            <EditText
                android:id="@+id/add_address_address"
                style="@style/gray_small_style"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_toRightOf="@+id/add_address_address_text"
                android:background="@drawable/edit_address"
                android:hint="@string/add_address_address_hint"
                android:paddingLeft="6.0dip" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        style="@style/white_normal_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip"
        android:background="@drawable/btn_order_submit"
        android:text="@string/add_address_confirm" />

</LinearLayout>