<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitebg"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/wait_order_info"
            style="@style/gray_small_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wait_order_info_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/remind_seller_btn"
            style="@style/white_normal_style"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20.0dip"
            android:background="@drawable/orange_btn"
            android:drawableLeft="@drawable/wait_order_horn_icon"
            android:drawablePadding="30.0dip"
            android:paddingLeft="40.0dip"
            android:paddingRight="40.0dip"
            android:text="@string/remind_seller_btn_text" />

        <Button
            android:id="@+id/confirm_order_btn"
            style="@style/white_normal_style"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20.0dip"
            android:background="@drawable/orange_btn"
            android:drawableLeft="@drawable/wait_order_ok_icon"
            android:drawablePadding="30.0dip"
            android:paddingLeft="40.0dip"
            android:paddingRight="40.0dip"
            android:text="@string/confirm_order_btn_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/contact_seller_btn"
            style="@style/white_normal_style"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15.0dip"
            android:background="@drawable/orange_btn"
            android:drawableLeft="@drawable/wait_order_contact_icon"
            android:drawablePadding="30.0dip"
            android:paddingLeft="40.0dip"
            android:paddingRight="40.0dip"
            android:text="@string/contact_seller_btn_text" />
    </LinearLayout>

</RelativeLayout>